--- a/BookListApp/Base.lproj/Main.storyboard
+++ b/BookListApp/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="M22-Wb-p2o" kind="presentation" identifier="showBookModal" destinationCreationSelector="showBookModal:" id="eZa-OH-kWd"/>
+                        <segue destination="M22-Wb-p2o" kind="show" identifier="showBookForm" destinationCreationSelector="showBookForm:" id="UJX-vb-Dwb"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rv9-GW-K9C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -55,18 +55,18 @@
             <objects>
                 <viewController id="M22-Wb-p2o" customClass="BookViewController" customModule="BookListApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XSO-wt-PZa">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hqe-ij-hIa" customClass="AsyncImageView" customModule="BookListApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hqe-ij-hIa" customClass="AsyncImageView" customModule="BookListApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="414" height="200"/>
                                 <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="ise-1D-Yc5"/>
+                                    <constraint firstAttribute="height" constant="200" id="ise-1D-Yc5"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kqV-20-yjT">
-                                <rect key="frame" x="167" y="110.5" width="80" height="79"/>
+                                <rect key="frame" x="167" y="148.5" width="80" height="79"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="kqV-20-yjT" secondAttribute="height" multiplier="1:1" id="i7P-VM-XMU"/>
                                     <constraint firstAttribute="width" constant="80" id="wPW-ZW-whC"/>
@@ -78,36 +78,36 @@
                                     <action selector="pickImageButtonTapped:" destination="M22-Wb-p2o" eventType="touchUpInside" id="EGe-3E-He3"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="tLZ-2Z-C4a">
-                                <rect key="frame" x="20.5" y="320" width="373" height="223"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="tLZ-2Z-C4a">
+                                <rect key="frame" x="20.5" y="308" width="373" height="208"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ML-yt-V1T">
-                                        <rect key="frame" x="0.0" y="0.0" width="373" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="373" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="nombre del libro" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4gm-Rg-a8G">
-                                        <rect key="frame" x="0.0" y="36.5" width="373" height="34"/>
+                                        <rect key="frame" x="0.0" y="32" width="373" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Autor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIH-25-fx4">
-                                        <rect key="frame" x="0.0" y="86.5" width="373" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="81" width="373" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="nombre del autor" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zoe-fa-vu3">
-                                        <rect key="frame" x="0.0" y="123" width="373" height="34"/>
+                                        <rect key="frame" x="0.0" y="114" width="373" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LMF-HJ-Rhm">
-                                        <rect key="frame" x="0.0" y="173" width="373" height="50"/>
+                                        <rect key="frame" x="0.0" y="163" width="373" height="45"/>
                                         <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="L3Y-wg-WBf"/>
+                                            <constraint firstAttribute="height" constant="45" id="L3Y-wg-WBf"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="Guardar">
@@ -119,9 +119,19 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wrm-rP-ke8">
+                                <rect key="frame" x="161.5" y="556" width="91" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Ver Frases"/>
+                                <connections>
+                                    <action selector="showQuoteButtonTapped:" destination="M22-Wb-p2o" eventType="touchUpInside" id="Swn-A2-BIu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="Wrm-rP-ke8" firstAttribute="top" secondItem="LMF-HJ-Rhm" secondAttribute="bottom" constant="40" id="33N-kn-P5t"/>
+                            <constraint firstItem="Wrm-rP-ke8" firstAttribute="centerX" secondItem="gdv-w9-8b8" secondAttribute="centerX" id="7W2-Ks-pbB"/>
                             <constraint firstItem="tLZ-2Z-C4a" firstAttribute="width" secondItem="XSO-wt-PZa" secondAttribute="width" multiplier="0.9" id="LPX-b0-o2V"/>
                             <constraint firstItem="kqV-20-yjT" firstAttribute="centerX" secondItem="Hqe-ij-hIa" secondAttribute="centerX" id="Ygz-pf-6wr"/>
                             <constraint firstItem="Hqe-ij-hIa" firstAttribute="leading" secondItem="XSO-wt-PZa" secondAttribute="leading" id="fet-cM-OQy"/>
@@ -129,19 +139,60 @@
                             <constraint firstItem="tLZ-2Z-C4a" firstAttribute="top" secondItem="Hqe-ij-hIa" secondAttribute="bottom" constant="20" id="lFi-Ku-tiW"/>
                             <constraint firstAttribute="trailing" secondItem="Hqe-ij-hIa" secondAttribute="trailing" id="rYS-US-1hW"/>
                             <constraint firstItem="tLZ-2Z-C4a" firstAttribute="centerX" secondItem="gdv-w9-8b8" secondAttribute="centerX" id="wVh-pP-8Jv"/>
-                            <constraint firstItem="Hqe-ij-hIa" firstAttribute="top" secondItem="XSO-wt-PZa" secondAttribute="top" id="zlV-0w-wiV"/>
+                            <constraint firstItem="Hqe-ij-hIa" firstAttribute="top" secondItem="gdv-w9-8b8" secondAttribute="top" id="zlV-0w-wiV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gdv-w9-8b8"/>
                     </view>
+                    <navigationItem key="navigationItem" id="xfi-G9-I4u"/>
                     <connections>
                         <outlet property="bookAuthorTextField" destination="Zoe-fa-vu3" id="bak-v9-pNv"/>
                         <outlet property="bookCoverImageView" destination="Hqe-ij-hIa" id="sz2-NT-nET"/>
                         <outlet property="bookNameTextField" destination="4gm-Rg-a8G" id="dcm-r7-RhS"/>
+                        <outlet property="showQuotesButton" destination="Wrm-rP-ke8" id="Lt1-2j-43g"/>
+                        <segue destination="SqC-r7-Kop" kind="presentation" identifier="showQuotes" destinationCreationSelector="showQuotes:" id="EsL-CA-qUK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hrK-8A-04U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2002.8985507246377" y="167.41071428571428"/>
+            <point key="canvasLocation" x="1941" y="169"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="awf-ja-qKL">
+            <objects>
+                <tableViewController id="SqC-r7-Kop" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="GWE-o2-udU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuoteCell" textLabel="RXn-DS-1sH" style="IBUITableViewCellStyleDefault" id="yHC-jg-7od">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yHC-jg-7od" id="Sno-Xc-MMm">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="RXn-DS-1sH">
+                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="SqC-r7-Kop" id="kT2-4h-BsE"/>
+                            <outlet property="delegate" destination="SqC-r7-Kop" id="m7p-SZ-bch"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="eeZ-OF-xfe"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eQz-fh-RCR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2864" y="174"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rmM-y6-Lve">
